@@ -14,6 +14,8 @@ Version 1.4.5 - CVS
   - Fixed uid based authentication in administrator plugin. Thanks to
     Gareth Johnston.
   - Added three Tahoma stylesheets.
+  - Added function and option page code required to display messages for
+    errors that might happen when options are saved.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
